--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
             <groupId>org.simpleflatmapper</groupId>
             <artifactId>sfm-csv</artifactId>
             <version>8.2.3</version>                
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.0-alpha1</version>
         </dependency> 
     </dependencies>
 </project>
